--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {},
   "scripts": {
     "server": "./node_modules/.bin/babel-node ./index.js",
+    "build" : "./scripts/build.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
